@@ -1,20 +1,6 @@
 ##-*- mode: org -*-
 
 * Very *Urgent*
-** TODO <nsparseMatrix> %*% <nsparseMatrix> and crossprod(), tcrossprod() often return a pattern,
-   i.e., nsparseMatrix as well *because*  cholmod_ssmult() just does that even
-   if only *one* of the two matrices is a pattern matrix.  The latter case
-   is really wrong.  The above behavior seems many years old.. and
-   sometimes is interesting and good, using  Boolean arithmetic: T+T := T|T = T
-
-   Currently I think we should change to return *numeric*, i.e., behave the same as for
-   'ndenseMatrix' or 'lsparseMatrix' or traditional logical matrices.
-   OTOH, we then would want to provide the previous functionality via a
-   Matrix package R function in some way.  What name should this function get ?
-
-   What Matrix - dependent packages would break ?
-   ==> send e-mail to all maintainer(<reverse-dependencies-of-Matrix>) ??
-
 * *Urgent* in some sense ---------------------------------------------------
 ** DONE [t]crossprod() could/should become more lenient with *vector*s: adapt R-devel (= R 3.2.0)'s rules:
    see misc/products-Mv.R and *.Rout -- now tests/matprod.R ("3.2.0")
@@ -24,6 +10,9 @@
 ** DONE M[i,j] should *not* drop dimnames (R-forge bug 2556, see ~/R/MM/Pkg-ex/Matrix/dimnames-prod.R)
 ** DONE "Math"/"Math2" *fail* entirely for sparseVectors
 ** DONE rbind2(<sparse>, <dense>) did not work, now is completely wrong !! (e.g. <dgC>, <dge>)
+** TODO qr.R(), qrR() etc currently *lose* column/row names {compared to base R's qr.R}, see,
+   	drop0(R. <- qr.R(qx), tol=1e-15) # columns are int b1 c1 c2 b2 c3
+   in man/qr-methods.Rd :                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ but there are no colnames!
 ** TODO M[<sparse 2-column Matrix>] indexing should work (but with a warning: use *dense*!)
 ** TODO doxygen (seed inst/Doxyfile and ../../www/doxygen/UPDATE_me.sh) now _fails_ partly, e.g., for
         ------- e.g., for src/Csparse.c, Csp_dense_products(...)  around lines 600
@@ -48,6 +37,19 @@ alternatively also is_sym() [in src/cs_utils.c], see below.
 
 ** TODO kronecker(<symmetric>, <symmetric>) should return symmetricMatrix, notably
    when one of the arguments is diagonal
+** DONE <nsparseMatrix> %*% <sparseMatrix>, crossprod() & tcrossprod() often return
+   a pattern, i.e., nsparseMatrix as well *because*  cholmod_ssmult() just does that even
+   if only *one* of the two matrices is a pattern matrix.  The latter case
+   is really wrong.  The above behavior seems many years old.. and
+   sometimes is interesting and good, using  Boolean arithmetic: T+T := T|T = T
+
+   For 1.2-0, changed the result to return *numeric* when *one* of the two
+   matrices is not nsparse.
+   ==> Provide the previous functionality via a Matrix package R function:
+   ==> We've introduced  '%&%' for Matrix 1.2-0  and 'boolArith = TRUE'
+       for crossprod/tcrossprod.
+** TODO (see above) Should we always return *numeric*, i.e., behave the same as for
+   'ndenseMatrix' or 'lsparseMatrix' or traditional logical matrices ?
 * New smallish ideas, relatively urgent for MM -----------------------------
 ** DONE generalize new "indMatrix" class, to allow 0 repetitions
  of some samples, i.e., columns of all 0 s. It's mathematically more
@@ -226,12 +228,17 @@ alternatively also is_sym() [in src/cs_utils.c], see below.
   Matrix( signif(ee$vectors, 3) )
 
 * Everything else aka "Miscellaneous" --------------------------------------
-** qr.R(qr(x)) may differ for the "same" matrix, depending on it being
+** TODO qr.R(qr(x)) may differ for the "same" matrix, depending on it being
   sparse or dense:
     "qr.R(<sparse>) may differ from qr.R(<dense>) because of permutations"
-
-  This is not really acceptable and currently influences  rcond() as well.
-
+*** TODO column names are *not* produced, whereas dense qr.R(.) *has* column names.
+*** DONE We provide `qrR()` .. but not entirely happily:
+    Users are still a bit frustrated and it currently influences  rcond() as well.
+** TODO rcond(<sparseMatrix>)  for square currently goes via *dense* -- BAD --
+  can we go via qr() in any case?
+  In some cases, e.g. lmer()'s  "Lambda" (block triangular, small blocks)
+       rcond(L) :=  1 / (norm(L) * norm(solve(L)))
+  is simple {and remains sparse, as solve(L) is still block triangular}
 ** facmul() has no single method defined;  it looks like a good idea though
   (instead of the infamous qr.qy, qr.qty,.... functions)
 
@@ -264,12 +271,13 @@ alternatively also is_sym() [in src/cs_utils.c], see below.
   chunks and would not need to re-allocate anything in many cases.
   HOWEVER, replCmat() in R/Csparse.R is still far from making use of that.
 
-** TODO advertize  rbind2() / cbind2() and (rather?) rBind() / cBind()
+** DONE Thanks to base::rbind, cbind now doing S4 dispatch on C level:
+   no Need anymore:... [[actually the contrary: do deprecate  rbind2() etc eventually!]]
+   advertize  rbind2() / cbind2() and (rather?) rBind() / cBind()
    	      ------                            -----
   in all vignettes / talks / ... !!
   People erronously try rbind/cbind see that they don't work and then
   reinvent the wheel!
-
   --> Consider using the new  'dotMethods' functionality to define
       cbind() and rbind() versions that work with Matrix.
       The "Rmpfr" package does that now.
@@ -313,18 +321,11 @@ alternatively also is_sym() [in src/cs_utils.c], see below.
   Note that defining xtfrm() does not "help" (as sort() then goes via dense
   index).  See "mean" in R/Matrix.R
 
-** TODO rcond(<sparseMatrix>)  for square currently goes via *dense* -- BAD --
-  can we go via qr() in any case?
-  In some cases, e.g. lmer()'s  "Lambda" (block triangular, small blocks)
-       rcond(L) :=  1 / (norm(L) * norm(solve(L)))
-  is simple {and remains sparse, as solve(L) is still block triangular}
-
-** TODO How can we ensure that     inst/include/cholmod.h		 remains
+** TODO How can we ensure that     inst/include/cholmod.h	remains
   correct and equivalent to  src/CHOLMOD/Include/cholmod_core.h  and  siblings ???
   {currently need to do this manually (Emacs M-x compare-windows) for the   typedefs}
-
-** check all uses of  alloca()/Alloca() in  src/*.[ch]
-  ensuring that the *size* allocated cannot grow with the
-  vector/matrix/nnzero sizes of the input.
-  [see the change needed in svn r2770 in src/dtCMatrix.c !]
+** DONE SMALL_4_Alloca := 10000; check all uses of  alloca()/Alloca() in  src/*.[ch]
+   ensuring that the *size* allocated cannot grow with the
+   vector/matrix/nnzero sizes of the input.
+   [see the change needed in svn r2770 in src/dtCMatrix.c !]
 
